--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "license": "MIT",
   "dependencies": {
     "@discordjs/rest": "^0.5.0",
+    "@discordjs/builders": "0.15.0",
+    "@discordjs/collection": "0.7.0",
     "@prisma/client": "3.15.0",
     "@types/graphql-fields": "^1.3.4",
     "apollo-server": "^3.9.0",
@@ -18,8 +20,7 @@
     "graphql-scalars": "^1.17.0",
     "reflect-metadata": "^0.1.13",
     "tslib": "^2.4.0",
-    "type-graphql": "^1.1.1",
-    "typescript": "^4.7.4"
+    "type-graphql": "^1.1.1"
   },
   "devDependencies": {
     "@swc/core": "^1.2.204",
@@ -28,7 +29,8 @@
     "prisma": "3.15.0",
     "regenerator-runtime": "^0.13.9",
     "ts-node": "^10.8.1",
-    "typegraphql-prisma": "^0.20.4"
+    "typegraphql-prisma": "^0.20.4",
+    "typescript": "^4.7.4"
   },
   "scripts": {
     "generate": "npx prisma generate",
