--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
     "emitDecoratorMetadata": true,
     "esModuleInterop": true,
   },
-  "exclude": ["node_modules"],
+  "exclude": ["./node_modules"],
   "include": ["src/**/*"],
   "ts-node": {
     "compilerOptions": {
